--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,8 @@
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+
 <!doctype html>
 <html lang="en">
 <head>
